<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lablet</string>
    <string name="script_activity_name">Lablet</string>
    <string name="action_done">Done</string>
    <string name="action_settings">Video Settings</string>
    <string name="action_sensors">Sensors</string>
    <string name="action_view">View</string>
    <string name="action_origin">Origin</string>
    <string name="action_analyse">Analyse</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_help">Help</string>
    <string name="action_apply">Apply</string>
    <string name="action_calibration">Calibration</string>
    <string name="action_delete">Delete</string>
    <string name="action_mail">Export</string>
    <string name="action_info">Info</string>
    <string name="action_scripts">Lab Activities</string>
    <string name="standalone_experiments">Single Experiments</string>
    <string name="action_import">Import</string>
</resources>
