<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_mail"
          android:icon="@drawable/ic_action_mail"
          android:title="@string/action_mail"
          yourapp:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_delete"
          android:icon="@drawable/ic_action_delete"
          android:title="@string/action_delete"
          yourapp:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_scripts"
          android:icon="@drawable/ic_console"
          android:title="@string/action_scripts"
          yourapp:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_info"
          android:icon="@drawable/ic_info"
          android:title="@string/action_info"
          yourapp:showAsAction="ifRoom|withText"/>
</menu>