<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_mail_results"
          android:icon="@drawable/ic_action_mail"
          android:title="@string/action_mail"
          yourapp:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_run_settings"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/action_analyse"
          yourapp:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_calibration_settings"
          android:icon="@drawable/ic_ruler"
          android:title="@string/action_calibration"
          yourapp:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_back"
          android:icon="@drawable/ic_action_back"
          android:title="@string/action_back"
          yourapp:showAsAction="ifRoom|withText"/>
</menu>